<resources>
    <string name="app_name">Language Translator</string>
    <string name="translation_key">trnsl.1.1.20160908T092615Z.9b7e4d8b17216cd8.66d062c870f3df71f02829f87d48b1c5281c12ef</string>
    <string name="translating">Translating…</string>
    <string name="enter_text">Enter text</string>
    <string name="translate">Translate</string>
    <string name="powered_by_yandex">Powered by Yandex.Translate</string>
    <string name="to">To</string>
    <string name="from">From</string>
    <string name="select_language">Select Language</string>
    <string name="defaultInputText">English</string>
    <string name="defaultOutputText">French</string>

    <string-array name="testValues">
        <item>en</item>
        <item>fr</item>
        <item>es</item>
        <item>de</item>
        <item>zh</item>
        <item>ja</item>
    </string-array>

    <string name="proceed">Proceed</string>
    <string name="fetching_languages">Fetching Languages…</string>
    <string name="error_message">Error Loading Languages</string>
    <string name="switch_translation">Switch Translation</string>
    <string name="languages_switched">Languages switched</string>
</resources>
