<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#0099cc"
        tools:context=".FullscreenActivity">


        <TextView
            android:id="@+id/fullscreen_content"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:keepScreenOn="true"
            android:text="@string/fetching_languages"
            android:textColor="#33b5e5"
            android:textSize="24sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/error_message"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/colorAccent"
            android:layout_above="@+id/button"
            android:layout_marginBottom="20dp"
            android:textSize="18sp"
            android:visibility="gone"
            android:layout_centerHorizontal="true"
            android:text="@string/error_message"/>

        <Button
            android:id="@+id/button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:visibility="gone"
            android:layout_alignParentBottom="true"
            android:text="@string/proceed" />

    </RelativeLayout>

</layout>

